; ModuleID = '/home/carl/AnghaBench/mruby/mrbgems/mruby-random/src/extr_random.c_random_default.c'
source_filename = "/home/carl/AnghaBench/mruby/mrbgems/mruby-random/src/extr_random.c_random_default.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.RClass = type { i32 }

@.str = private unnamed_addr constant [7 x i8] c"Random\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"DEFAULT\00", align 1
@E_TYPE_ERROR = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [25 x i8] c"Random::DEFAULT replaced\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @random_default to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @random_default(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.RClass*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call %struct.RClass* @mrb_class_get(i32* %5, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  store %struct.RClass* %6, %struct.RClass** %3, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = load %struct.RClass*, %struct.RClass** %3, align 8
  %9 = call i32 @mrb_obj_value(%struct.RClass* %8)
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @mrb_intern_lit(i32* %10, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  %12 = call i32 @mrb_const_get(i32* %7, i32 %9, i32 %11)
  store i32 %12, i32* %4, align 4
  %13 = load i32*, i32** %2, align 8
  %14 = load i32, i32* %4, align 4
  %15 = load %struct.RClass*, %struct.RClass** %3, align 8
  %16 = call i32 @mrb_obj_is_kind_of(i32* %13, i32 %14, %struct.RClass* %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %22, label %18

18:                                               ; preds = %1
  %19 = load i32*, i32** %2, align 8
  %20 = load i32, i32* @E_TYPE_ERROR, align 4
  %21 = call i32 @mrb_raise(i32* %19, i32 %20, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.2, i64 0, i64 0))
  br label %22

22:                                               ; preds = %18, %1
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local %struct.RClass* @mrb_class_get(i32*, i8*) #1

declare dso_local i32 @mrb_const_get(i32*, i32, i32) #1

declare dso_local i32 @mrb_obj_value(%struct.RClass*) #1

declare dso_local i32 @mrb_intern_lit(i32*, i8*) #1

declare dso_local i32 @mrb_obj_is_kind_of(i32*, i32, %struct.RClass*) #1

declare dso_local i32 @mrb_raise(i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
